--- a/distances_metric_investigation.qmd
+++ b/distances_metric_investigation.qmd
@@ -59,52 +59,80 @@ for (i in 2:10) {
     data.frame() |> 
     ggplot(aes(x = `results..1...m_matrix`)) +
     geom_density() +
-    ggtitle(paste0("Distribution of means for", " i ", "clusters"))
+    ggtitle(paste0("Distribution of means for ", i,  " clusters"))
     )
 }
 
 print(results[[1]]$dist_matrix |>
   data.frame() |>
   ggplot(aes(x = `results..1...dist_matrix`)) +
-  geom_density() +
-  ggtitle(paste0("Distribution of distances for", " i ", "clusters"))
-  )
+  geom_histogram() +
+  ggtitle(paste0("Distribution of distances for ", p, " dimensonal Normal Distribution"))
+  ) +
+  theme_minimal()
 ```
 
 ## Uniform Dist
 
 ```{r}
-# starting seed
-starting_seed <- 599
-# number of simulations
-num_sim <- 2
-# dim of data
-p <- 100
-# number of data points per sim
-n <- 100
-
-results <- lapply(c(1:num_sim), function(x) {
-    temp_seed <- starting_seed * x
-    set.seed(temp_seed) # very important to set this
-    data <- data.frame(replicate(p, runif(n)))
-    list_of_matrix <- resample_function(data = data,
-                                        k = 3,
-                                        number_of_resamples = 70,
-                                        proportion_resample = 0.5)
-    m_matrix <- mean_matrix(list_of_matrix)
-    dist_matrix <- as.matrix(dist(data, method = "euclidean"))
-    return(list(m_matrix = as.vector(m_matrix),
-                dist_matrix = as.vector(dist_matrix)))
-})
-
-results[[1]]$m_matrix |> 
-  hist()
-
+#| warning: false
+for (i in 2:10) {
+  # starting seed
+  starting_seed <- 599
+  # number of simulations
+  num_sim <- 2
+  # dim of data
+  p <- 10
+  # number of data points per sim
+  n <- 100
+  # number of clusters
+  k <- i
+  
+  results <- lapply(c(1:num_sim), function(x) {
+      temp_seed <- starting_seed * x
+      set.seed(temp_seed) # very important to set this
+      data <- data.frame(replicate(p, rexp(n)))
+      list_of_matrix <- resample_function(data = data,
+                                          k = k,
+                                          number_of_resamples = 100,
+                                          proportion_resample = 0.5)
+      m_matrix <- mean_matrix(list_of_matrix)
+      dist_matrix <- as.matrix(dist(data, method = "euclidean"))
+      return(list(m_matrix = as.vector(m_matrix),
+                  dist_matrix = as.vector(dist_matrix)))
+  })
+  
+  print(results[[1]]$m_matrix |> 
+    data.frame() |> 
+    ggplot(aes(x = `results..1...m_matrix`)) +
+    geom_density() +
+    ggtitle(paste0("Distribution of means for ", i,  " clusters"))
+    )
+}
 
 print(results[[1]]$dist_matrix |>
   data.frame() |>
   ggplot(aes(x = `results..1...dist_matrix`)) +
-  geom_density() +
-  ggtitle(paste0("Distribution of distances for ", p," clusters"))
-  )
+  geom_histogram() +
+  ggtitle(paste0("Distribution of distances for ", p, " dimensonal Exponential Distribution"))
+  ) +
+  theme_minimal()
 ```
+```{r}
+m_matrix <- mean_matrix(resample_function(data = penguins |> dplyr::select(bill_length_mm, bill_depth_mm)))
+
+
+plot <- data.frame(m_matrix) |> 
+  rownames_to_column("Index") |> 
+  pivot_longer(-Index) |> 
+  mutate(Index = factor(Index, levels = 1:nrow(m_matrix)),
+         name = factor(name, levels = paste0("X", 1:nrow(m_matrix)))) |> 
+  ggplot(aes(x = Index, y = name)) +
+  geom_tile(aes(fill = value))
+
+ggplotly(plot)
+
+
+image(m_matrix)
+```
+
